Bug 508553 - Selecting a host from the list does ommits domain in "Connect to" text field.
Summary: Selecting a host from the list does ommits domain in "Connect to" text field.
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.08.0
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-21 10:50 UTC by Arek Guzinski
Modified: 2025-08-26 14:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arek Guzinski 2025-08-21 10:50:20 UTC
STEPS TO REPRODUCE
1. have something like "rdp://user@host?domain=mydomain.local" in the list.
2. click that entry (once or double to connect - does not matter)

OBSERVED RESULT
The "Connect to" text field contains "user@host?domain"

EXPECTED RESULT
The "Connect to" text field contains "user@host?domain=mydomain.local"

The problem with this behaviour:
If I start the connection from "Connect to", either after clicking the correct entry or when re-establishing the previous connection, KRDC will try to connect without the domain information and by that use the wrong user.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1
Comment 1 Bug Janitor Service 2025-08-26 13:49:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/207
Comment 2 Fabio 2025-08-26 14:43:36 UTC
Git commit 1c06eb535016e5f1128660e8ab04877978cadacb by Fabio Bas.
Committed on 26/08/2025 at 13:44.
Pushed by ctrlaltca into branch 'master'.

Address input: don't remove the path/query information from the URL when loading a bookmark or connecting

M  +2    -2    mainwindow.cpp

https://invent.kde.org/network/krdc/-/commit/1c06eb535016e5f1128660e8ab04877978cadacb
Comment 3 Fabio 2025-08-26 14:50:09 UTC
Git commit 92a558cf07baf41fff1db8daf7a01801fc6b09b2 by Fabio Bas.
Committed on 26/08/2025 at 14:47.
Pushed by ctrlaltca into branch 'release/25.08'.

Address input: don't remove the path/query information from the URL when loading a bookmark or connecting


(cherry picked from commit 1c06eb535016e5f1128660e8ab04877978cadacb)

Co-authored-by: Fabio Bas <ctrlaltca@gmail.com>

M  +2    -2    mainwindow.cpp

https://invent.kde.org/network/krdc/-/commit/92a558cf07baf41fff1db8daf7a01801fc6b09b2