Address input: don't remove the path/query information from the URL when loading a bookmark or connecting

BUG: 508553